classDiagram
    class Vehicle {
        -color
        -regnum
        -make
        -model
        +getMake()
        +getModel()
        +getColor()
        +getRegNum()
        +getSlotNum(type: value)
        +isElectric()
        +park()
        +leave()
        +edit()
        +status()
        +getSlotNum(type: value)
    }

    class ElectricVehicle {
        -charge
        +getCharge()
        +setCharge()
        +chargeStatus()
    }

    class Car {
        +getType()
    }
    class Truck {
        +getType()
    }
    class Motorcycle {
        +getType()
    }
    class Bus {
        +getType()
    }
    class ElectricCar {
        +getType()
    }
    class ElectricBike {
        +getType()
    }

    Vehicle <|-- Car
    Vehicle <|-- Truck
    Vehicle <|-- Motorcycle
    Vehicle <|-- Bus
    Vehicle <|-- ElectricVehicle
    ElectricVehicle <|-- ElectricCar
    ElectricVehicle <|-- ElectricBike

    class ParkingLot {
        -levels
        +createParkingLot()
        +getAllLevelCapacity()
        +getAllLevelEVCapacity()
        +getLevelWithSlots()
        +park(vehicle)
    }

    class ParkingLevel {
        -slots
        +hasEmptySlotFor(vehicle)
        +park(vehicle)
        +remove(slot_id)
        +status()
    }

    class ParkingSlot {
        -slot_id: int
        -vehicle: Vehicle
        +isOccupied()
        +assign(vehicle)
        +removeVehicle()
        +matches(vehicle)
    }

    class RegularSlot {
    }
    class EVSlot {
        +connectCharger()
        +startCharging()
        +costPerHour()
    }

    ParkingLot o-- ParkingLevel
    ParkingLevel o-- ParkingSlot
    ParkingSlot <|-- RegularSlot
    ParkingSlot <|-- EVSlot

    ParkingLot o--> Vehicle : uses
    ParkingLevel o--> Vehicle : uses
    ParkingSlot o--> Vehicle : uses
